--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
+spring.config.import=file:env.properties
 spring.application.name=U5-W2-D3
 #Web configuration
-server.port=3001
+server.port=${SERVER_PORT}
 #Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/Blog
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.username=${SERVER_NAME}
+spring.datasource.password=${SERVER_PASSWORD}
 
 # Hibernate Config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=public
+
+# Cloudinary configuration
+
+cloudinary.cloudName=${CLOUDINARY_NAME}
+cloudinary.apiKey=${CLOUDINARY_API_KEY}
+cloudinary.apiSecret=${CLOUDINARY_API_SECRET}
